--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
 		"@tailwindcss/forms": "^0.5.2",
 		"@testing-library/jest-dom": "^5.16.4",
 		"@testing-library/svelte": "^3.1.3",
+		"@testing-library/user-event": "^14.2.1",
 		"@types/jest": "^28.1.2",
 		"@typescript-eslint/eslint-plugin": "^5.27.0",
 		"@typescript-eslint/parser": "^5.27.0",
@@ -46,6 +47,7 @@
 	},
 	"type": "module",
 	"dependencies": {
+		"svelte-forms": "^2.3.1",
 		"zod": "^3.17.3"
 	}
 }
